# reliable-tabular-shift

./: .gitignore  CITATION.cff  CONTRIBUTING.md  DOCUMENT_TOOLCHAIN.lock.md  FILES_EXCLUDED_FROM_PUBLIC_RELEASE.csv  GITHUB_UPLOAD_MANIFEST.csv  LICENSE  LICENSE_SCOPE.md  Makefile  PUBLIC_RELEASE_CHECKLIST.md  QUICKSTART.md  README.md  REPRODUCIBILITY_LEVELS.md  environment.lock.yml  pyproject.toml  reproduce_artifacts.sh  reproduce_full_experiment.sh  reproduce_one_task.sh  requirements-export.txt  verify_release.sh
configs/: stage2_formal_release.yml
data_registry/: DATA_REBUILD_MANIFEST.csv  LICENSE_BOUNDARIES.md  OFFICIAL_DATA_SOURCES.csv
figure_source_data/: SOURCE_DATA_INDEX.csv  artifact_inventory_counts.csv  figure1_study_design.csv  figure2_complexity_budget.csv  figure3_common5_heterogeneity.csv  figure4_standard_mondrian_tradeoff.csv  figure5_auroc_reliability.csv  supp_college_stress.csv  supp_full_lofo.csv  supp_full_loto.csv  supp_h5_common50_cells.csv  supp_table_s1_h1_rates.csv  supp_table_s2_h2_model_strata.csv  supp_table_s3_budget_fractions.csv  supp_table_s4_deletion_stability.csv  supp_table_s5_h4_thresholds.csv  supp_table_s6_h5_low_budget.csv  supp_table_s7_simulation_isotonic.csv  table1_tasks_source.csv  table2_methods_source.csv  table3_h2_h3_expected.csv  table3_h2_h3_source.csv  table4_h5_expected.csv
manuscript_build/: AUDITED_ARTIFACT_HASHES.csv  manuscript_source.md  references_stage3q.bib  supplement_source.md
protocol/: FINAL_ANALYSIS_PLAN.md  FINAL_CLAIMS_REGISTRY.csv  FINAL_DEVIATION_LOG.md  FINAL_EXPERIMENT_PROTOCOL.md  (+1 more)
(+52 files in other folders)
